# APIwithFastAPI

./: .env  .gitignore  README.md  makefile  pyproject.toml  requirements.txt
api/: main.py  schemas.py
contexts/players/: api_schemas.py  models.py  resources.py
contexts/players/routers/: api_schemas.py  players.py
contexts/users/: models.py
contexts/users/routers/: api_schemas.py  login.py  users.py
infra/: alembic.ini  compose.yaml  database.py
infra/migrations/: env.py
infra/migrations/versions/: 5275e8e3be50_add_user_table.py  e84428659bc8_new_player_table.py  f45303a64518_add_shirt_number_on_player.py  ff1b1aa72dec_add_updated_at_to_players.py
libs/base_types/: email_address.py  numbers.py  password.py
libs/exceptions/: basis_exception.py
tests/: conftest.py  database.py  test_main.py
tests/contexts/players/: test_resources.py
tests/contexts/players/routers/: test_routers.py
tests/contexts/users/routers/: test_routers.py
tests/migrations/: test_migration_endpoint.py
