[tool.poetry]
name = "apiwithfastapi"
version = "0.1.0"
description = ""
authors = ["gabmartins <gabrielpassosmartins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = "^0.32.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
